[tool.poetry]
name = "transfer-project"
version = "0.1.0"
description = ""
authors = ["dudeslav1ch <dudeslav1ch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
